add two column filler

--- a/index.html
+++ b/index.html
@@ -61,7 +61,30 @@
     <div class="horizontal-line">
       <span class="horizontal-line-text">Title Here</span>
     </div>
+
+
+    <div class="column-container">
+
+      <div class="column-item" style="width:calc(50% - 20px); height: 200px; background-color:yellow"></div>
+
+      <div class="column-item" style="width: 40px; height: 200px; background-color:blue"></div>
+
+      <div class="column-item" style="width:calc(50% - 20px); height: 200px; background-color:green"></div>
+
+      <div class="clear-column"></div>
+
+    </div>
+
+
+    <div class="horizontal-line">
+      <span class="horizontal-line-text">Title Here</span>
+    </div>
+
+    
+    
   </div>
+
+
 
   
 
