--- a/public/404.html
+++ b/public/404.html
@@ -1,58 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
-
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:300,400,700' rel='stylesheet' type='text/css'>
+    
+    <link rel="stylesheet" type="text/css" href="/error_assets/style/404_style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+  <div id="wrap">
+
+    <div class="logo-and-greeting">
+      <img src="error_assets/img/DH-lab-gray.png" alt="DH lab logo" class="logo"/>
+
+      <div class="greeting">
+        Hi, there! The page you are looking for does not exist.<br>
+        But don't worry, there are no 404 errors here&mdash;just outliers.<br><br>
+        <a href="#">Return to Home Page &rsaquo;&rsaquo;</a>
+      </div>
+    </div>
+
+    <div class="you-are-here-container">
+      <img src="error_assets/svg/you-are-here.svg" alt="You are here visualization" class="you-are-here">   
+    </div>
+
+    <div class="vector-container">
+      <img src="error_assets/svg/vector-wave-rotated.svg" alt="Full page data visualization" onerror="this.src='error_assets/img/vector-wave-rotated.png'">
+    </div>
+
+    <div class="push"></div>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+    
+  <div id="footer">
+    <div id="footer-left">
+      <div id="footer-left-top-brand">Yale</div>
+      <div id="footer-left-top-university">UNIVERSITY LIBRARY</div>
+      <div id="footer-left-bottom">Digital Humanities Laboratory</div>
+    </div>
+  </div>
 </body>
+
+
+
+
+
+
 </html>
