add updated 404 that supports all device sizes

--- a/public/404.html
+++ b/public/404.html
@@ -14,7 +14,7 @@
       <img src="error_assets/img/DH-lab-gray.png" alt="DH lab logo" class="logo"/>
 
       <div class="greeting">
-        Hi, there! The page you are looking for does not exist.<br>
+        Hi, there! The page you are looking for does not exist.<div class="optional-br"><br></div>
         But don't worry, there are no 404 errors here&mdash;just outliers.<br><br>
         <a href="#">Return to Home Page &rsaquo;&rsaquo;</a>
       </div>
