update 404 and 500 pages

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" type="text/css" href="/error_assets/style/404_style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yale DHLab</title>
+    <title>Yale DHLab | 404</title>
   </head>
 
   <body>
