--- a/public/500.html
+++ b/public/500.html
@@ -16,7 +16,7 @@
         <img src="/error_assets/img/DH-lab-gray.png" alt="DH lab logo" class="logo"/>
 
         <div class="greeting">
-          Oops! Something has gone wonderfully wrong.<div class="optional-br"><br></div>
+          We're sorry, but we've broken the internet.<div class="optional-br"><br></div>
           But don't worry, there are no 500 errors here&mdash;just outliers.<br><br>
           <a href="/">Return to Home Page &rsaquo;&rsaquo;</a>
         </div>
